# inxidash

./: Cargo.toml  README.md  build.rs
src/: config.rs  error.rs  generated_assets.rs  main.rs
src/models/: mod.rs  system_report.rs
src/rendering/: html_renderer.rs  mod.rs  theme.rs
src/routes/: api.rs  dashboard.rs  download.rs  mod.rs  static_files.rs
src/services/: inxi_service.rs  mod.rs  parser.rs
src/utils/: ansi.rs  mod.rs
static/css/: app.css
static/js/: dashboard.js
