[package]
name = "inxi-dash"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
tokio = { version = "1.40", features = ["full"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
walkdir = "2.3"
